--- a/pom.xml
+++ b/pom.xml
@@ -1130,6 +1130,11 @@
               <artifactId>antlr-runtime</artifactId>
               <version>${antlr.wso2.version}</version>
           </dependency>
+          <dependency>
+              <groupId>org.apache.felix</groupId>
+              <artifactId>org.apache.felix.scr.ds-annotations</artifactId>
+              <version>${apache.felix.scr.ds-annotations.version}</version>
+          </dependency>
       </dependencies>
    </dependencyManagement>
     <reporting>
@@ -1200,7 +1205,7 @@
       <maven.jacoco.plugin.version>0.8.2</maven.jacoco.plugin.version>
       <jacoco.version>0.8.2</jacoco.version>
       <maven.assembly.plugin.version>2.2-beta-2</maven.assembly.plugin.version>
-      <maven.bundle.plugin.version>1.4.0</maven.bundle.plugin.version>
+      <maven.bundle.plugin.version>3.2.0</maven.bundle.plugin.version>
       <maven.dependency.plugin.version>2.0</maven.dependency.plugin.version>
       <antlr3.maven.plugin.version>3.4</antlr3.maven.plugin.version>
       <maven.antrun.plugin.version>1.8</maven.antrun.plugin.version>
@@ -1344,6 +1349,7 @@
        <version.org.wso2.orbit.javax.activation>1.1.1.wso2v3</version.org.wso2.orbit.javax.activation>
        <version.orbit.rabbitmq>3.6.6.wso2v1</version.orbit.rabbitmq>
        <jaeger-client.version>0.32.0.wso2v1</jaeger-client.version>
+       <apache.felix.scr.ds-annotations.version>1.2.4</apache.felix.scr.ds-annotations.version>
    </properties>
    <developers>
       <!-- If you are a committer and your name is not listed here, please include/edit -->
