--- a/pom.xml
+++ b/pom.xml
@@ -1135,6 +1135,36 @@
               <artifactId>org.apache.felix.scr.ds-annotations</artifactId>
               <version>${apache.felix.scr.ds-annotations.version}</version>
           </dependency>
+          <dependency>
+              <groupId>javax.ws.rs</groupId>
+              <artifactId>javax.ws.rs-api</artifactId>
+              <version>${javax.api.version}</version>
+          </dependency>
+          <dependency>
+              <groupId>javax.inject</groupId>
+              <artifactId>javax.inject</artifactId>
+              <version>${javax.inject.version}</version>
+          </dependency>
+          <dependency>
+              <groupId>org.glassfish.jersey.media</groupId>
+              <artifactId>jersey-media-json-jackson</artifactId>
+              <version>${glassfish.jersey.version}</version>
+          </dependency>
+          <dependency>
+              <groupId>org.glassfish.jersey.containers</groupId>
+              <artifactId>jersey-container-grizzly2-servlet</artifactId>
+              <version>${glassfish.jersey.version}</version>
+          </dependency>
+          <dependency>
+              <groupId>org.glassfish.jersey.core</groupId>
+              <artifactId>jersey-client</artifactId>
+              <version>${glassfish.jersey.version}</version>
+          </dependency>
+          <dependency>
+              <groupId>org.glassfish.jersey.inject</groupId>
+              <artifactId>jersey-hk2</artifactId>
+              <version>${glassfish.jersey.version}</version>
+          </dependency>
       </dependencies>
    </dependencyManagement>
     <reporting>
@@ -1350,6 +1380,12 @@
        <version.orbit.rabbitmq>3.6.6.wso2v1</version.orbit.rabbitmq>
        <jaeger-client.version>0.32.0.wso2v1</jaeger-client.version>
        <apache.felix.scr.ds-annotations.version>1.2.4</apache.felix.scr.ds-annotations.version>
+
+       <javax.api.version>2.1.1</javax.api.version>
+       <javax.inject.version>1</javax.inject.version>
+
+       <glassfish.jersey.version>2.32</glassfish.jersey.version>
+
    </properties>
    <developers>
       <!-- If you are a committer and your name is not listed here, please include/edit -->
