Add xml-apis dependency to integration tests.
Add xml-apis dependency to integration tests.

--- a/modules/integration/pom.xml
+++ b/modules/integration/pom.xml
@@ -321,6 +321,10 @@
 
     <dependencies>
         <dependency>
+            <groupId>xml-apis</groupId>
+            <artifactId>xml-apis</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.apache.synapse</groupId>
             <artifactId>synapse-core</artifactId>
         </dependency>
